Unify navigation menu spacing: remove extra margin from 'Fraud Prevention Tips'

--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ a {
 /* 기존 기울임 관련 설정 제거 */
 .nav-tip {
     display: inline-block;
-    margin-left: 10px;
 }
 
 
